--- a/app/globals.css
+++ b/app/globals.css
@@ -3,10 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    scroll-behavior: smooth;
-  }
-  body {
+  html, body {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth; /* اسکرول نرم */
     overflow-x: hidden;
   }
   
